Update translation keys for onboarding
Why:
----
The application name is hardcoded on the translation values, we need to
have the name change with the environment.

This Commit:
----
- Use application name for onboarding screens
- Remove unused keys
- Update Lokalise data

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -40,12 +40,16 @@
     "start_title": "Απαντήστε σε ερωτήσεις σχετικά με τα συμπτώματά σας και το ιατρικό ιστορικό σας για να μάθετε το επόμενό σας βήμα σχετικά με τον COVID-19"
   },
   "common": {
+    "alert": "Συναγερμός",
     "close": "Κλείσιμο",
     "continue": "Συνέχεια",
+    "disabled": "Απενεργοποιήθηκε",
     "done": "Ολοκληρώθηκε",
+    "enabled": "Ενεργοποιήθηκε",
     "maybe_later": "Ίσως αργότερα",
     "next": "Επόμενο",
     "no_thanks": "Οχι ευχαριστώ",
+    "okay": "Εντάξει",
     "settings": "Άνοιγμα Ρυθμίσεων",
     "skip": "Παραλείψετε",
     "something_went_wrong": "Κάτι πήγε στραβά",
@@ -118,42 +122,40 @@
   "home": {
     "bluetooth": {
       "all_services_on_subheader": "Οι ειδοποιήσεις έκθεσης είναι ενεργοποιημένες",
-      "tracing_off_button": "Να επιτρέπονται οι ειδοποιήσεις έκθεσης",
+      "bluetooth_disabled_error_message": "Ενεργοποίηση Bluetooth στις Ρυθμίσεις της εφαρμογής",
+      "bluetooth_disabled_error_title": "Ενεργοποίηση Bluetooth στις Ρυθμίσεις",
+      "bluetooth_header": "Bluetooth",
+      "fix": "Επιδιόρθωση",
+      "proximity_tracing_header": "Ανίχνευση εγγύτητας",
+      "report_positive_result": "Αναφορά θετικής διάγνωσης",
+      "share": "Μοιραστείτε την εφαρμογή και βοηθήστε στον περιορισμό της επιδημίας",
+      "share_message": "Ρίξτε μια ματιά σε αυτήν την εφαρμογή {{applicationName}} , η οποία μπορεί να μας βοηθήσει να περιορίσουμε τον COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Οι ειδοποιήσεις έκθεσης απενεργοποιήθηκαν",
       "tracing_off_subheader": "Ενεργοποιήστε τις ειδοποιήσεις έκθεσης για να λάβετε πληροφορίες σχετικά με πιθανές εκθέσεις",
+      "tracing_on_header": "Ενεργό",
       "unauthorized_error_message": "Πρέπει να εξουσιοδοτήσετε την καταγραφή έκθεσης COVID-19 στις ρυθμίσεις της εφαρμογής για να συνεχίσετε.",
       "unauthorized_error_title": "Παρακαλούμε ενημερώστε τις ρυθμίσεις"
     }
   },
   "label": {
     "about_para": "Η εφαρμογή PathCheck διατίθεται από το Ίδρυμα PathCheck, έναν μη κερδοσκοπικό οργανισμό που δεσμεύεται να παρέχει δωρεάν λογισμικό για να σταματήσει η εξάπλωση του COVID-19 και να προστατεύσει το απόρρητο των ατόμων. \n\n Για περισσότερες πληροφορίες, επισκεφθείτε:",
-    "assessment_icon": "Εικονίδιο ντοσιέ με σημάδι επιλογής στο εσωτερικό",
-    "calendar_icon": "Εικονίδιο ημερολογίου",
     "check": "Σημάδι ελέγχου",
     "checked_checkbox": "Επιλεγμένο πλαίσιο",
-    "description_optional": "Περιγραφή (Προαιρετικό)",
-    "email_optional": "Email (απαιτείται)",
-    "home_icon": "Εικονίδιο αρχικής σελίδας",
     "language_icon": "Εικονίδιο με περίγραμμα μιας υδρογείου σφαίρας",
     "launch_enable_notif": "Ενεργοποίηση Ειδοποίησης",
     "launch_get_started": "Ξεκινήστε",
     "launch_screen1_header": "Καλώς ήρθατε στο PathCheck",
     "legal_page_address": "\"PathCheck\nΟδός Ντέι 58\nΤαχ. Θυρίδα 441621\nΣόμερβιλ, ΤΚ 02144 \"",
-    "more_icon": "Εικονίδιο τριών οριζόντιων κουκίδων",
     "privacy_policy": "Πολιτική Απορρήτου",
     "question_icon": "Εικονίδιο ερωτηματικού",
     "unchecked_checkbox": "Μη επιλεγμένο πλαίσιο",
     "unknown": "άγνωστο"
   },
-  "more": {
-    "debug": {
-      "submit_your_debug_log": "Υποβάλετε το αρχείο καταγραφής εντοπισμού σφαλμάτων"
-    }
-  },
   "navigation": {
-    "history": "Ιστορικό",
+    "exposure_history": "Ιστορικό Εκθέσεων",
     "home": "Αρχική",
     "more": "Περισσότερα",
+    "report_issue": "Αναφέρετε ένα πρόβλημα",
     "self_assessment": "Υγεία"
   },
   "onboarding": {
@@ -165,6 +167,20 @@
     "notification_subheader1": "Πότε θα ειδοποιηθώ;",
     "notification_subheader2": "Πώς δουλεύει;",
     "notification_subheader3": "Αυτή η εφαρμογή δεν σας προστατεύει από την λοίμωξη του COVID-19.",
+    "protect_privacy_button": "Πώς προστατεύουμε τα προσωπικά σας δεδομένα",
+    "protect_privacy": {
+      "body_1": "Αυτοί οι κωδικοί δεν περιέχουν προσωπικά στοιχεία και αλλάζουν κάθε 10-20 λεπτά για να προστατεύσουν την ταυτότητά σας.",
+      "body_2": "Τα τηλέφωνα ανταλλάσσουν κωδικούς με άλλες συσκευές που χρησιμοποιούν Bluetooth Low Energy. Αυτό επιτρέπει στην εφαρμογή να παρακολουθεί ανώνυμα τις καθημερινές σας συναντήσεις, ακόμα και όταν δεν την έχετε ανοιχτή στη συσκευή σας.",
+      "body_3": "Μετά τη θετική διάγνωσή τους με COVID-19, οι χρήστες μπορούν να μοιραστούν έναν κωδικό πρόσβασης με το COVIDaware MN για να επαληθεύσουν τη διάγνωσή τους. Εάν το κάνουν, οι πρόσφατοι τυχαίοι κωδικοί του τηλεφώνου τους επισημαίνονται και μεταφορτώνονται με ασφάλεια στον διακομιστή. Αυτή η διαδικασία επαλήθευσης βοηθά στην αποτροπή ψευδών θετικών αναφορών διάγνωσης.",
+      "body_4": "Στη συνέχεια, η εφαρμογή COVIDaware MN συγκρίνει τους επισημασμένους κωδικούς με το δικό της σύνολο κωδικών από τις πρόσφατες καθημερινές σας συναντήσεις. Αυτός είναι ο τρόπος με τον οποίο το COVIDaware MN μπορεί να αναγνωρίσει εάν υπάρχει πιθανότητα να έχετε εκτεθεί στον ιό.",
+      "body_5": "Αν υπάρχει αντιστοιχία, η εφαρμογή θα σας ειδοποιήσει και θα σας παρέχει περαιτέρω οδηγίες από το τμήμα υγείας σας σχετικά με το πώς να διατηρείτε τον εαυτό σας και τα άτομα γύρω σας ασφαλή.\nΈτσι το COVIDaware MN μπορεί να σας βοηθήσει να μένετε ενημερωμένοι για την υγεία σας και να διατηρείτε την κοινότητά σας ασφαλή, χωρίς να γνωρίζει ποιος είστε ή πού ήσασταν.",
+      "header": "Δείτε πώς προστατεύουμε τα προσωπικά σας δεδομένα",
+      "subheader_1": "Όταν ένας χρήστης ενεργοποιεί τις Ειδοποιήσεις Έκθεσης, το τηλέφωνό του επισημαίνεται με έναν τυχαίο κωδικό που αλλάζει συχνά",
+      "subheader_2": "Τηλέφωνα με ενεργοποιημένη ανίχνευση εγγύτητας ανταλλάζουν κωδικούς με άλλες συσκευές που εντοπίζουν",
+      "subheader_3": "Οι χρήστες που έχουν διαγνωστεί θετικά μπορούν να επιλέξουν να μοιραστούν ανώνυμα την κατάσταση υγείας τους",
+      "subheader_4": "Κάθε τηλέφωνο καλεί περιοδικά τον διακομιστή για τη λίστα των κωδικών που έχουν κοινοποιηθεί από θετικούς χρήστες και αναζητά ταιριάσματα",
+      "subheader_5": "Οι χρήστες ενημερώνονται εάν η εφαρμογή τους εντοπίσει θετικό ταίριασμα με έναν κωδικό με σήμανση"
+    },
     "proximity_tracing_body1": "Αν τα smartphones με εγκατεστημένη την εφαρμογή είναι ενεργοποιημένα, έχουν ενεργοποιημένο το bluetooth και βρίσκονται κοντά το ένα στο άλλο για ένα χρονικό διάστημα, καταχωρείται στη συσκευή σας μια συνάντηση.",
     "proximity_tracing_body2": "Σε περίπτωση συνάντησης, τα δεδομένα και οι πληροφορίες σας παραμένουν ανώνυμα. Η εφαρμογή δεν αποθηκεύει προσωπικά δεδομένα. Ανταλλάσσονται μόνο τυχαία αναγνωριστικά. Αυτά διαγράφονται εντός 14 ημερών.",
     "proximity_tracing_button": "Ενεργοποίηση εντοπισμού εγγύτητας",
@@ -187,9 +203,7 @@
     "screen4_image_label": "Ένα άτομο που λαμβάνει ειδοποίηση στο τηλέφωνό του",
     "screen5_header": "Με την εφαρμογή, μπορείτε να βοηθήσετε να σπάσει η αλυσίδα της μόλυνσης και να λάβετε βοήθεια απευθείας από τους εμπειρογνώμονες υγείας",
     "screen5_image_label": "Ένα άτομο που μιλάει ψηφιακά σε έναν εμπειρογνώμονα υγείας",
-    "step_1_of_3": "Βήμα 1 από 3",
-    "step_2_of_3": "Βήμα 2 από 3",
-    "step_3_of_3": "Βήμα 3 από 3"
+    "select_language": "Επιλογή γλώσσας"
   },
   "report_issue": {
     "body": "Πείτε μας τη γνώμη σας (απαιτείται)",
@@ -203,14 +217,8 @@
   "screen_titles": {
     "about": "Σχετικά με την εφαρμογή",
     "debug": "Εντοπισμός σφαλμάτων",
-    "debug_form": "Φόρμα εντοπισμού σφαλμάτων",
     "exposure_history": "Ιστορικό Εκθέσεων",
     "legal": "Νομοθεσία",
-    "report_issue": "Αναφέρετε ένα πρόβλημα",
-    "select_language": "Επιλογή γλώσσας"
-  },
-  "settings": {
-    "share_test_result": "Αναφορά θετικής διάγνωσης",
-    "share_test_result_description": "Ειδοποιήστε ανώνυμα άλλους που μπορεί να έχετε συναντήσει πρόσφατα εάν έχετε διαγνωστεί θετικά με COVID-19"
+    "report_issue": "Αναφέρετε ένα πρόβλημα"
   }
 }
