--- a/android/app/src/main/res/values-es-rPR/strings.xml
+++ b/android/app/src/main/res/values-es-rPR/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <!-- Channel label for notifications shown in App > Notifications > Path Check BT -->
-  <string name="notification_channel_description">Notificaciones de PathCheck BT</string>
+  <string name="exposure_notification_message">Has estado cerca de alguien que tuvo un positivo por COVID-19. Pulse para obtener más información.</string>
 </resources>
