update the missing greek translations

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -203,7 +203,9 @@
     "screen4_image_label": "Ένα άτομο που λαμβάνει ειδοποίηση στο τηλέφωνό του",
     "screen5_header": "Με την εφαρμογή, μπορείτε να βοηθήσετε να σπάσει η αλυσίδα της μόλυνσης και να λάβετε βοήθεια απευθείας από τους εμπειρογνώμονες υγείας",
     "screen5_image_label": "Ένα άτομο που μιλάει ψηφιακά σε έναν εμπειρογνώμονα υγείας",
-    "select_language": "Επιλογή γλώσσας"
+    "select_language": "Επιλογή γλώσσας",
+    "step": "Βήμα {{currentStep}} από {{totalSteps}}",
+    "welcome_image_label": "Μια απεικόνιση ατόμων με μάσκες, συνδεδεμένες σαν κόμβους σε ένα δίκτυο."
   },
   "report_issue": {
     "body": "Πείτε μας τη γνώμη σας (απαιτείται)",
