--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,7 +75,7 @@
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
     "consent_body_1": "If you choose to do so, you’re helping others in your community make informed decisions about their health and playing your part to contain the spread of the virus.",
     "consent_body_2": "The only information shared will be the random set of numbers your phone exchanged over Bluetooth with other phones that were nearby during the past 14 days,  along with a weighted risk score based on when your symptoms developed.",
-    "consent_button_title": "I understand and consent",
+    "consent_button_title": "I Understand and Consent",
     "consent_subheader_1": "Why should I share?",
     "consent_subheader_2": "How does it work?",
     "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
@@ -86,7 +86,7 @@
       "verification_code_used": "Verification code has already been used"
     },
     "publish_consent_body_bluetooth": "Sharing your positive diagnosis is optional and can only be done with your consent.\n\nIf you choose to do so, you're helping others in your community make informed decisions about their health and playing your part to contain the spread of the virus.\n\nThe only information shared will be the random set of numbers your phone exchanged over Bluetooth with other phones that were nearby during the past 14 days, along with a weighted risk score based on when your symptoms developed.",
-    "publish_consent_title_bluetooth": "Notify your community",
+    "publish_consent_title_bluetooth": "Notify others in your community",
     "start_header_bluetooth": "Help contain the spread of the virus and protect others in your community"
   },
   "exposure_history": {
